syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Empty {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message CreateOrderRequest {
  float price = 1;
  float tax = 2;
}

message ListOrderResponse {
  repeated Order order = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {};
  rpc ListOrder(Empty) returns (ListOrderResponse) {};
}
